Need to check-in IR work in progress. But lots of tidy up to do and tests for code coverage. At this point it is still a bit of an experiment.